--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -12,6 +12,13 @@
             <a href="{{ .URL }}">{{.Name }}</a>
           </li>
           {{end -}}
+          <li class="searchbar">
+            <form action="/search" method="GET">
+              <input type="search" name="q" id="search-query" placeholder="Search....">
+              
+            </form>
+
+          </li>
         </ul>
       </nav>
     </header>
