--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -14,10 +14,8 @@
           {{end -}}
           <li class="searchbar">
             <form action="/search" method="GET">
-              <input type="search" name="q" id="search-query" placeholder="Search....">
-              
+              <input class="searchbar" type="search" name="q" id="search-query" placeholder="Search....">
             </form>
-
           </li>
         </ul>
       </nav>
